<resources>
    <string name="app_name">Genuine Spare Agencies</string>
    <string name="back">Back</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="click_back_to_exit">Please click BACK button again to exit</string>
    <string name="internal_error">Some internal error occurred. Please try again later.</string>
    <string name="no_network_message">No Internet connection. Please try later!</string>
    <string name="request_timed_out_message">Unable to connect to server. Please check internet connection and try
        again.
    </string>
    <string name="server_error">Some server error occurred. Please try again later.</string>
    <string name="error_field_cant_blank">field can\'t blank</string>
    <string name="error_field_country_code">Please enter country code</string>
    <string name="error_field_cant_blank_address">Please enter additional details, it will help us to deliver the order</string>
    <string name="error_field_password_length">Password length should be minimum 4 digits</string>

    <string name="error_field_not_valid_email">email is not valid</string>
    <string name="error_password_min_length">password min length is %1$d</string>
    <string name="error_password_max_length">password should not greater than %1$d</string>
    <string name="error_password_not_match">password should be same as confirm password</string>


    <string name="please_wait">Please wait…</string>
    <string name="default_error_button_retry_text">Retry</string>
    <string name="prompt_mobile">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="new_user"><u> New User? Click Here for Registration</u></string>
    <string name="set_your_password">Set Your Password</string>
    <string name="contact_name">Contact Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="gst_number">GST Number</string>
    <string name="pan_number">Pan Number</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="email">Email</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="register_as_retailer">Register as Retailer</string>
    <string name="error_mobile_not_validation">Mobile Number Invalid</string>
    <string name="error_password_not_validation"><![CDATA[Password should have !, @, #, $, & one of these special character]]></string>
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
    <string name="title_home">Home</string>
    <string name="orders">Orders</string>
    <string name="points">CashBack</string>
    <string name="ledger">Ledger</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browse_by_companies">Browse by companies</string>
    <string name="see_all">See All</string>
    <string name="browse_by_categories">Browse by Categories</string>
    <string name="featured_product">Featured Product(s)</string>
    <string name="part_no">Part No:</string>
    <string name="mrp">MRP:</string>
    <string name="welcome">Welcome</string>
    <string name="shop_by_company">Shop by Company</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="search_company">Search Company</string>
    <string name="search_category">Search Category</string>
    <string name="search">Search</string>
    <string name="shop_by_product">Shop by Product</string>
    <string name="search_product">Search Product</string>
    <string name="search_products">Search Products</string>
    <string name="cart">Shopping cart</string>
    <string name="pay_now">PAY NOW</string>
    <string name="get_discount"><u>Get 3% Additional Discount</u></string>
    <string name="pay_later">PAY LATER</string>
    <string name="payment_details">Payment Details</string>
    <string name="charges">Total Amount</string>
    <string name="discount">Discount</string>
    <string name="grand_total">Grand Total</string>
    <string name="order_placed">Order Placed</string>
    <string name="goto_orders">Go to Orders</string>
    <string name="error_field_gst_number">Invalid GST number</string>
    <string name="error_pan_number">Invalid PAN number</string>
    <string name="error_aadhar_number">Invalid Aadhar Number</string>
    <string name="company_name">Company Name:</string>
    <string name="place_order">Place Order</string>
    <string name="shop_more">Shop Now</string>
    <string name="no_item_cart">No Item in cart</string>
    <string name="order_no">Order No:</string>
    <string name="date">Date:</string>
    <string name="amount">Amount:</string>
    <string name="status">Status:</string>
    <string name="my_orders">My Order</string>
    <string name="sr_no">S.No.</string>
    <string name="quantity">Quantity</string>
    <string name="part_no_">Part No</string>
    <string name="amount_">Amount</string>
    <string name="total">Total:</string>
    <string name="order_details">Order Details</string>
    <string name="discount_">Discount:</string>
    <string name="grand_total_">Grand Total:</string>
    <string name="dispatched_amount">Dispatched Amount</string>
    <string name="update_password">Update Password:</string>
    <string name="update">Update</string>
    <string name="my_account">My Account</string>
    <string name="my_ledger">My Ledger</string>
    <string name="Rs">\u20B9</string>
    <string name="earn_more_points">Earn more CashBack</string>
    <string name="shop_now">Shop Now</string>
    <string name="rewards">Rewards</string>
    <string name="spend_points">Spend CashBack</string>
    <string name="recent_points_history">Recent CashBack History</string>
    <string name="points_">CashBack:</string>
    <string name="my_points">My CashBack</string>
    <string name="search_hint">Search Product</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_points">Enter CashBack Points</string>
    <string name="entered_points_greater">Entered cashback points are greater than total cashback points.</string>
    <string name="Redeem_Points">Redeem CashBack</string>
    <string name="description">Description</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="balance">Balance</string>
    <string name="date_">Date</string>
    <string name="no_orders_found">No Order Found</string>
    <string name="description_">Description:</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="channel_name" translatable="false">GSA</string>
    <string name="notifications">Notifications</string>
    <string name="no_notification_found">No Notification Found</string>
    <string name="no_favorites_found">No Favorites Found</string>
    <string name="no_retailor_found">No Retailer Found</string>
    <string name="retailor_list">Retailer List</string>

    <string name="favorites">Favorites</string>
    <string name="my_favorites">My Favorites</string>
    <string name="name">Name</string>
    <string name="selected_retailer">Selected Retailer</string>
</resources>
