<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:visible="true"
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="@string/orders" />

    <item
        android:id="@+id/navigation_points"
        android:icon="@drawable/ic_stars_black_24dp"
        android:title="@string/points" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/favorites" />


    <item
        android:id="@+id/navigation_ledger"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/ledger" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_perm_identity_black_24dp"
        android:title="@string/account" />
</menu>
