<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    android:layout_height="match_parent"
    >
    <View
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="4"
        android:layout_height="wrap_content">
        <View
            android:background="@color/black"
            android:layout_width="1dp"
            android:layout_height="20dp"/>

        <TextView
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:textSize="9sp"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/date_"
            android:ellipsize="end"
            android:textColor="@color/black"
            />
        <View
            android:background="@color/black"
            android:layout_width="1dp"
            android:layout_height="20dp"/>

        <TextView
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:textSize="9sp"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/description"
            android:ellipsize="end"
            android:textColor="@color/black"
            />
        <View
            android:background="@color/black"
            android:layout_width="1dp"
            android:layout_height="20dp"/>

        <TextView
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:textSize="9sp"
            android:maxLines="2"

            android:ellipsize="end"
            android:text="@string/debit"

            android:textColor="@color/black"
            />
        <View
            android:background="@color/black"
            android:layout_width="1dp"
            android:layout_height="20dp"/>

        <TextView
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
         android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:textSize="9sp"
            android:maxLines="2"
            android:gravity="center"
            android:ellipsize="end"
            android:text="@string/credit"

            android:textColor="@color/black"
            />
        <View
            android:background="@color/black"
            android:layout_width="1dp"
            android:layout_height="20dp"/>

        <TextView
            android:layout_weight="0.9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
        android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:textSize="9sp"
            android:maxLines="2"
            android:gravity="center"
            android:ellipsize="end"
            android:text="@string/balance"

            android:textColor="@color/black"
            />

        <View
            android:background="@color/black"
            android:layout_width="1dp"
            android:layout_height="20dp"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ledger_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" />


</LinearLayout>