<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_14"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >
    <include
        layout="@layout/app_custom_tool_bar"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:scrollbars="none" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/llPaylow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:lineSpacingExtra="2.5sp"
            android:text="@string/payment_details"
            android:textColor="@color/black"
            android:textSize="12.4sp" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginTop="5dp"
            android:background="@color/grey" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_light"
                android:lineSpacingExtra="2.5sp"
                android:text="@string/charges"
                android:textColor="@color/black"
                android:textSize="12.5sp" />

            <TextView
                android:id="@+id/txt_charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_light"
                android:lineSpacingExtra="2.5sp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="12.5sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_light"
                android:lineSpacingExtra="2.5sp"
                android:text="@string/discount"
                android:textColor="@color/black"
                android:textSize="12.5sp" />

            <TextView
                android:id="@+id/txt_promotion"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_light"
                android:lineSpacingExtra="2.5sp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="12.5sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_medium"
                android:lineSpacingExtra="2.5sp"
                android:text="@string/grand_total"
                android:textColor="@color/black"
                android:textSize="12.5sp" />

            <TextView
                android:id="@+id/txt_grand_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_medium"
                android:lineSpacingExtra="2.5sp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="12.5sp" />


        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/llCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/rlTrackOrders"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:layout_weight="1"
            android:background="@color/white">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/pay_now"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/txt_grand_total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:lines="1"
                    android:ellipsize="end"
                    android:text="@string/get_discount"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    />

            </LinearLayout>
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rlBuyNow"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:background="@color/colorPrimary">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto_regular"
                android:layout_centerHorizontal="true"
                android:text="@string/place_order"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                />



        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:id="@+id/rlNoData"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:layout_centerHorizontal="true"
            android:text="@string/no_item_cart"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/tvShopMore"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/roboto_regular"
            android:layout_centerHorizontal="true"
            android:text="@string/shop_more"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            />



    </LinearLayout>

</RelativeLayout>