<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="@dimen/activity_padding"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            app:layout_constraintVertical_bias=".20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/logo_gsa"
            android:id="@+id/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="200dp"/>





        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:paddingStart="@dimen/padding3x4"
            android:paddingEnd="@dimen/padding3x4"
            android:drawableLeft="@drawable/ic_smartphone_black_24dp"
            android:layout_gravity="center"
            android:animateLayoutChanges="@bool/show"
            app:layout_constraintVertical_bias=".08"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintTop_toBottomOf="@+id/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawablePadding="@dimen/margin5x2"
            android:background="@drawable/rounded_corners_app_grey_edittext_bg"
            android:hint="@string/prompt_mobile"
            android:inputType="number"
            android:singleLine="@bool/show"
            android:drawableTint="@color/blue_a"
            android:textColor="@color/black"
            android:textSize="18sp" tools:ignore="UnusedAttribute"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:paddingStart="@dimen/padding3x4"
            android:paddingEnd="@dimen/padding3x4"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            android:animateLayoutChanges="@bool/show"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:background="@drawable/rounded_corners_app_grey_edittext_bg"
            android:drawablePadding="@dimen/margin5x2"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="20dp"
            android:hint="@string/prompt_password"
            android:maxLength="15"
            android:drawableTint="@color/blue_a"
            android:inputType="textPassword"
            android:singleLine="@bool/show"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sp18"
            tools:ignore="UnusedAttribute"/>


        <Button
            android:layout_width="300dp"
            android:id="@+id/btnLogin"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin5x4"
            app:layout_constraintStart_toStartOf="parent"
            android:textAllCaps="true"
            android:text="@string/action_sign_in_short"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/rounded_corners_app_blue_button_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvnewUserSignUp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/new_user"
            android:textSize="15.8sp"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            android:textColor="@color/yellow"

            />
        <!--
            <include layout="@layout/progrss_layout"/>
        -->


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>